JIRA 428 - Similar style fix (#794)
* fix(style): corrected issue with similar listing tile title overflowing

--- a/app/styles/_quickview.scss
+++ b/app/styles/_quickview.scss
@@ -130,6 +130,13 @@ ul.list-unstyled.RecentActivity
         display: inline-block;
     }
 
+    .listing-title{
+        width: 147px;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
     .recommendations-tile{
         @extend .quickview-header;
         cursor: pointer;
